# docs/swagger/swagger.json
@@ -358,14 +358,10 @@
         "services.ChangePasswordForm": {
             "type": "object",
             "required": [
-                "confirmPassword",
                 "newPassword",
                 "oldPassword"
             ],
             "properties": {
-                "confirmPassword": {
-                    "type": "string"
-                },
                 "newPassword": {
                     "type": "string"
                 },
@@ -393,15 +389,11 @@
         "services.CompleteResetPasswordForm": {
             "type": "object",
             "required": [
-                "confirmPassword",
                 "newPassword",
                 "token",
                 "username"
             ],
             "properties": {
-                "confirmPassword": {
-                    "type": "string"
-                },
                 "newPassword": {
                     "type": "string"
                 },
@@ -453,6 +445,9 @@
                 "username": {
                     "type": "string",
                     "maxLength": 256
+                },
+                "validateOnly": {
+                    "type": "boolean"
                 }
             }
         },
